[gd_scene load_steps=4 format=3 uid="uid://cejn0x82p4vcn"]

[ext_resource type="Script" uid="uid://sl7rs4hrme1x" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://dxdkt76vmq0em" path="res://Assets/icon.svg" id="2_6t5aa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dm0k"]
size = Vector2(100, 100)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_cvnsp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7dm0k")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.6293945e-06, -3.8146973e-06)
scale = Vector2(0.78124994, 0.7812501)
texture = ExtResource("2_6t5aa")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="DashCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashLengthTimer" type="Timer" parent="."]
one_shot = true

[node name="LightAttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="LightAttackLengthTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashCooldownTimer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="DashLengthTimer" to="." method="_on_dash_length_timer_timeout"]
[connection signal="timeout" from="LightAttackCooldownTimer" to="." method="_on_light_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="LightAttackLengthTimer" to="." method="_on_light_attack_length_timer_timeout"]
